--- a/src/styles/shared.module.css
+++ b/src/styles/shared.module.css
@@ -9,3 +9,14 @@
 .layout h2 {
   text-align: center;
 }
+
+.video {
+  display: block;
+  width: 400px;
+  margin: auto;
+}
+
+.videoContainer {
+  width: 100%;
+  margin: auto;
+}
